--- a/HTML/Form.html
+++ b/HTML/Form.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<type>
+
     <head>
         <title>This is the Introduction Form</title>
     </head>
+    <body>
     <form action="next_page.html" method="get" >
     
     <label for="fname">First Name:</label>
@@ -14,6 +15,7 @@
     <label for="Phone">Phone:</label>
     <input autocomplete="tel" id="Phone" type="number"   required><br>
     <input type="submit" value="submit">
+    <label></label>
     </form>
    
  </body>
