--- a/HTML/next_page.html
+++ b/HTML/next_page.html
@@ -1,10 +1,13 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>this is the external stylesheet</title>
+        <link rel="stylesheet" href="../CSS/Submitted.css">
     </head>
-    <body>
-      <h1> Thanking You!!!</h1>
+    <body id="main">
+      <h1>Thanking you ...!!!</h1>
+      <h2>Your form is Successfully Submitted</form></h2>
+      
     </body>
     </html>
 
