new updated file location

--- a/Javascript-form-assignment/HTML/next_page.html
+++ b/Javascript-form-assignment/HTML/next_page.html
@@ -6,7 +6,7 @@
     </head>
     <body id="main">
       <h1>Thanking you ...!!!</h1>
-      <h2>Your form is Successfully Submitted</form></h2>
+      <h2n>Your form is Successfully Submitted</form></h2>
       
     </body>
     </html>
